# vault-autopilot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: code-review.yaml  release.yaml
docker/: Dockerfile  README.md
docs/: conf.py  index.rst
docs/cli/: commands.rst  configuration.rst  getting_started.rst  installation.rst  manifests.rst  user_guide.rst
shell_scripts/: activate_venv.sh  cli.sh  collect_json_schemas.py  collect_json_schemas.sh  install_dependencies.sh  sphinx_autobuild.sh  sphinx_build.sh  sphinx_pre_build.sh
src/vault_autopilot/: __main__.py  _conf.py  conf.py  dep_manager.py  dispatcher.py  exc.py  parser.py  storage.py
src/vault_autopilot/_cli/: apply.py  exc.py  workflow.py
src/vault_autopilot/_cli/commands/: apply.py
src/vault_autopilot/_pkg/asyva/: __init__.py  authenticator.py  client.py  constants.py  exc.py
src/vault_autopilot/_pkg/asyva/composer/: __init__.py  base.py  namespace.py  standard.py  token.py
src/vault_autopilot/_pkg/asyva/dto/: __init__.py  base.py  issuer.py  password_policy.py  pki_role.py  secret.py  secrets_engine.py
src/vault_autopilot/_pkg/asyva/entity/: __init__.py  password_policy.py
src/vault_autopilot/_pkg/asyva/manager/: __init__.py  base.py  kv.py  kvv1.py  kvv2.py  password_policy.py  pki.py  system_backend.py
src/vault_autopilot/_pkg/asyva/templates/: password_policy.jinja  password_policy_rule.jinja
src/vault_autopilot/_pkg/asyva/util/: hcl.py
src/vault_autopilot/cli/: apply.py
src/vault_autopilot/dispatcher/: __init__.py  dispatcher.py  event.py
src/vault_autopilot/dto/: __init__.py  abstract.py  base.py  issuer.py  password.py  password_policy.py  pki_role.py  secrets_engine.py  ssh_key.py
src/vault_autopilot/helper/: pydantic.py
src/vault_autopilot/pipeline/: __init__.py  _yaml.py
src/vault_autopilot/processor/: __init__.py  abstract.py  issuer.py  issuer_create.py  password.py  password_create.py  password_policy.py  password_policy_create.py  pki_role.py  secrets_engine.py  ssh_key.py
src/vault_autopilot/repo/: __init__.py  snapshot.py
src/vault_autopilot/service/: __init__.py  _abstract.py  _issuer.py  _password.py  _password_policy.py  _pki_role.py  _secrets_engine.py  _ssh_key.py  abstract.py
src/vault_autopilot/state/: __init__.py  issuer.py  password.py  password_policy.py  pki_role.py
src/vault_autopilot/util/: __init__.py  coro.py  dep_manager.py  dependency_chain.py  encoding.py  model.py  pydantic.py
