[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vault-autopilot"
description = "Effortlessly manage your secrets and other Vault resources with the power of automation."
readme = "README.md"
requires-python = ">=3.11"
license-files = { paths = ["LICENSE"] }
authors = [
  { name = "ab0142", email = "120799552+ab0142@users.noreply.github.com" },
]
keywords = [
  "hashicorp vault",
]
# https://pypi.org/classifiers/
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Framework :: Hatch",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "click~=8.1.7",
  "pydantic~=2.4.2",
  "pyyaml~=6.0.1",
  "aiohttp~=3.8.5",
  "lazy-object-proxy~=1.9.0",
  "jinja~=3.1.2",
  "networkx~=3.2.1",
  "more-itertools~=10.1.0",
  "ironfence~=0.1.0"
]
version = "0.1.0"

[project.urls]
Repository = "https://github.com/ab0142/vault-autopilot"

[project.optional-dependencies]
dev = [
  "black~=23.7.0",
  "isort~=5.12.0",
  "ruff~=0.0.285",
  "mypy~=1.5.1",
  "pre-commit~=3.4.0",
]
types = [
  "types-click~=7.1.8",
  "types-dataclasses~=0.6.6",
  "types-pyyaml~=6.0.12.12",
]

[tool.black]
line-length = 88
target-version = ['py311']
exclude = '''
(
    \.git
  | dist
  | venv
  | docs
)
'''

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.isort]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"

[tool.mypy]
python_version = "3.11"
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true
enable_incomplete_feature = ["Unpack"]
plugins = [
  "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = [
  "lazy_object_proxy.*",
  "networkx.*"
]
ignore_missing_imports = true

[tool.semantic_release]
build_command = """
  python -m pip install --upgrade build
  python -m build .
"""
version_variables = ["./src/vault_autopilot/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
commit_message = "bump: {version}\n\nAutomatically generated by python-semantic-release"
major_on_zero = false

[tool.semantic_release.commit_parser_options]
allowed_tags = [
  "build",
  "chore",
  "ci",
  "docs",
  "feat",
  "fix",
  "perf",
  "style",
  "refactor",
  "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
